2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* NodeBuilders/ProceduresNodeBuilder.cs, NodeBuilders/TablesNodeBuilder.cs,
	NodeBuilders/UsersNodeBuilder.cs, NodeBuilders/ViewsNodeBuilder.cs:
	implemented create command
	* NodeBuilders/ProcedureNodeBuilder.cs, NodeBuilders/TableNodeBuilder.cs,
	NodeBuilders/UserNodeBuilder.cs, NodeBuilders/ViewNodeBuilder.cs:
	implemented drop, rename and refresh commands
	* NodeBuilders/ConnectionContextNodeBuilder.cs: use the new schemaprovider metadata support
	* NodeBuilders/ConnectionContextCollectionNodeBuilder.cs: implemented CreateDatabase

2007-07-18  Ben Motmans <ben.motmans@gmail.com>

	* NodeBuilders/ViewNodeBuilder.cs, NodeBuilders/UserNodeBuilder.cs,
	NodeBuilders/TableNodeBuilder.cs, NodeBuilders/ProcedureNodeBuilder.cs,
	NodeBuilders/ParametersNodeBuilder.cs: Added CommandHandlers and CommandUpdateHandlers
	* NodeBuilders/ConnectionContextNodeBuilder.cs, NodeBuilders/ConstraintsNodeBuilder.cs
	NodeBuilders/ProceduresNodeBuilder.cs, NodeBuilders/TablesNodeBuilder.cs,
	NodeBuilders/UsersNodeBuilder.cs, NodeBuilders/ViewsNodeBuilder.cs,
	NodeBuilders/TriggersNodeBuilder.cs: added CommandUpdateHandlers
	* NodeBuilders/ConnectionContextCollectionNodeBuilder.cs: added a NodeCommandHandler
	* ConnectionManagerCommands.cs: Create, Alter, Drop and Rename Schema commands
	* MonoDevelop.Database.ConnectionManager.addin.xml: Added ExtensionPoints for all NodeBuilders
	and added CommandItems for all ConnectionManagerCommands

2007-07-17  Ben Motmans <ben.motmans@gmail.com>

	* Makefile.am: initial makefile
	* ConnectionManagerCommands.cs: added CreateXXX, DropXXX, AlterXXX, RenameXXX commands
	* NodeBuilders/AggregatesNodeBuilder.cs, NodeBuilders/ColumnNodeBuilder.cs,
	NodeBuilders/ColumnsNodeBuilder.cs, NodeBuilders/ConnectionContextCollectionNodeBuilder.cs,
	NodeBuilders/ConnectionContextNodeBuilder.cs, NodeBuilders/ConstraintNodeBuilder.cs, 
	NodeBuilders/ConstraintsNodeBuilder.cs, NodeBuilders/GroupsNodeBuilder.cs, 