@@ -127,12 +127,5 @@ namespace MonoDevelop.Database.ConnectionManager
 			BaseNode node = CurrentNode.DataItem as BaseNode;
 			node.Refresh ();
 		}
-		
-		[CommandUpdateHandler (ConnectionManagerCommands.CreateConstraint)]
-		protected void OnUpdateCreateConstraint (CommandInfo info)
-		{
-			BaseNode node = (BaseNode)CurrentNode.DataItem;
-			info.Enabled = node.ConnectionContext.SchemaProvider.SupportsSchemaOperation (OperationMetaData.Create, SchemaMetaData.Constraint);
-		}
 	}
 }
